# stellar-vendorpulse

./: .env.example  .gitignore  README.md  netlify.toml  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
.github/workflows/: ci.yml  deploy.yml
contracts/: Cargo.toml
contracts/review_system/: Cargo.toml
contracts/review_system/src/: lib.rs  test.rs
contracts/review_system/test_snapshots/test/: test_duplicate_review_fails.1.json  test_get_vendor_reviews.1.json  test_initialize_success.1.json  test_initialize_twice_fails.1.json  test_inter_contract_score_update.1.json  test_score_aggregate.1.json  test_submit_review_invalid_score.1.json  test_submit_review_success.1.json
contracts/vendor_registry/: Cargo.toml
contracts/vendor_registry/src/: lib.rs  test.rs
contracts/vendor_registry/test_snapshots/test/: test_grant_and_get_role.1.json  test_initialize_success.1.json  test_initialize_twice_fails.1.json  test_list_vendors_pagination.1.json  test_non_admin_cannot_grant_role.1.json  test_register_multiple_vendors.1.json  test_register_vendor_success.1.json  test_revoke_role.1.json  test_update_vendor.1.json  test_update_vendor_score.1.json  test_valid_status_transitions.1.json
scripts/: deploy-local.sh  deploy-testnet.sh  upgrade-contract.sh
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/activity/: page.tsx
src/app/analytics/: page.tsx
src/app/dashboard/: page.tsx
src/lib/: logger.ts  stellar.ts  utils.ts
tests/frontend/: ActivityFeed.test.tsx  ConnectWalletButton.test.tsx  Dashboard.test.tsx
tests/integration/: inter-contract.test.ts
(+18 files in other folders)
