[package]
name = "review_system"
version = "1.0.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { version = "22.0.1" }

[dev-dependencies]
soroban-sdk = { version = "22.0.1", features = ["testutils"] }
vendor_registry = { path = "../vendor_registry", features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
